# android_device_xiaomi_sdm660-common

./: .gitignore  Android.bp  Android.mk  AndroidBoard.mk  AndroidProducts.mk  BoardConfig.mk  BoardConfigCommon.mk  CleanSpec.mk  Makefile.am  PlatformConfig.mk  README.md  WCNSS_qcom_cfg.ini  android_filesystem_config.h  appboosts.xml  awaken.dependencies  carbon.dependencies  common_prop.mk  compatibility_matrix.xml  component-overrides.xml  config.fs  configure.ac  device.mk  extract-files.sh  framework_manifest.xml  fstab.qcom  fstab_AB_variant.qcom  fstab_non_AB_variant.qcom  gamedwhitelist.xml  gpio-keys.kl  gps_vendor_board.mk  gps_vendor_product.mk  init.qcom.modem_links.sh  init.qti.qseecomd.sh  init.target.rc  init.target.vendor.rc  lineage.dependencies  lineage.mk  loc-api.pc.in  loc-hal.pc.in  manifest.xml  (+35 more)
DeviceDoze/: Android.bp  Android.mk  AndroidManifest.xml  proguard.flags
DeviceSettings/: Android.bp  Android.mk  AndroidManifest.xml  proguard.flags
KCal/: Android.mk  AndroidManifest.xml
RemovePackages/: Android.mk
XiaomiDoze/: Android.mk  AndroidManifest.xml
XiaomiParts/: Android.mk  AndroidManifest.xml
android/: AGnss.cpp  AGnss.h  AGnssRil.cpp  Android.mk  GeofenceAPIClient.cpp  GeofenceAPIClient.h  Gnss.cpp  Gnss.h  GnssAPIClient.cpp  GnssAPIClient.h  GnssBatching.cpp  GnssBatching.h  GnssConfiguration.cpp  GnssConfiguration.h  GnssDebug.cpp  GnssMeasurement.cpp  GnssMeasurement.h  android.hardware.gnss@1.0-service-qti.rc  gps.c  loc.cpp  loc_geofence.cpp  service.cpp
audio/: audio_effects.conf  audio_effects.xml  audio_output_policy.conf  audio_platform_info.xml  audio_policy_configuration.xml  bluetooth_qti_audio_policy_configuration.xml  mixer_paths.xml
biometrics/: Android.bp  BiometricsFingerprint.cpp  Hardware.h  android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sdm660.rc  android.hardware.biometrics.fingerprint@2.1-service.xiaomi_wayne.rc  android.hardware.biometrics.fingerprint@2.2-service.xiaomi_sdm660.rc  android.hardware.biometrics.fingerprint@2.2-service.xiaomi_sdm660.xml  service.cpp
bluetooth/: Android.mk  bdroid_buildcfg.h
configs/: component-overrides.xml  config.fs  media_codecs.xml  media_codecs_performance.xml  media_profiles_V1_0.xml  media_profiles_vendor.xml  msm_irqbalance.conf  powerhint.json  privapp-permissions-qti-product.xml  privapp-permissions-qti-system.xml  privapp-permissions-qti.xml  public.libraries.txt  qti_whitelist.xml  whitelistedapps.xml
core/: Android.mk  loc_gps.h  (+24 more)
loc_api/: Android.mk  Makefile.am  fake_property_service.c  fake_property_service.h  fake_sched_policy.c  fake_sched_policy.h
loc_api/ds_api/: Android.mk  ds_client.c  ds_client.h
loc_api/libloc_api/: Android.mk  gps.c  loc_eng.cpp  loc_eng.h  loc_eng_ioctl.cpp  loc_eng_ioctl.h  loc_eng_ni.cpp  loc_eng_ni.h  loc_eng_xtra.cpp  loc_eng_xtra.h
loc_api/libloc_api-rpc/: Android.mk
loc_api/libloc_api-rpc-50001/libloc_api-rpc-glue/: Android.mk
loc_api/libloc_api-rpc-50001/libloc_api-rpc-glue/rpc_inc/: LocApiRpc.h  LocApiRpcAdapter.h  debug.h  loc_api_fixup.h  loc_api_log.h  loc_api_rpc_glue.h  loc_api_sync_call.h  loc_apicb_appinit.h
loc_api/libloc_api-rpc-50001/libloc_api-rpc-glue/src/: LocApiRpc.cpp  LocApiRpcAdapter.cpp  loc_api_fixup.c  loc_api_log.c  loc_api_rpc_glue.c  loc_api_sync_call.c  loc_apicb_appinit.c
loc_api/libloc_api-rpc-50001/libloc_api-rpc-stub/: Android.mk
loc_api/libloc_api-rpc-50001/libloc_api-rpc-stub/inc/: loc_api_rpcgen_cb_rpc.h  loc_api_rpcgen_common_rpc.h  loc_api_rpcgen_rpc.h  loc_apicb_appinit.h
loc_api/libloc_api-rpc-50001/libloc_api-rpc-stub/src/: loc_api_rpcgen_cb_svc.c  loc_api_rpcgen_cb_xdr.c  loc_api_rpcgen_clnt.c  loc_api_rpcgen_common_xdr.c  loc_api_rpcgen_xdr.c  loc_apicb_appinit.c
loc_api/libloc_api-rpc-50001/libloc_api-rpc-stub/xdr/: loc_api.xdr  loc_api_cb.xdr  loc_api_common.xdr
loc_api/libloc_api-rpc/gen-1240/: Makefile.xdr  loc_api_rpc_glue.c
loc_api/libloc_api-rpc/gen-3200/: loc_api_rpc_glue.c
loc_api/libloc_api-rpc/gen-6356/: Makefile.xdr  loc_api_cb_svc.c  loc_api_cb_xdr.c  loc_api_clnt.c  loc_api_common_xdr.c  loc_api_xdr.c
loc_api/libloc_api-rpc/inc/: debug.h
loc_api/libloc_api-rpc/rpc_inc/: loc_api.h  loc_api_cb.h  loc_api_common.h  loc_api_rpc_glue.h
loc_api/libloc_api-rpc/src/: loc_api_rpc_glue.c  loc_apicb_appinit.c
loc_api/libloc_api_50001/: Android.mk  LocApiAdapter.cpp  LocApiAdapter.h  LocEngAdapter.cpp  LocEngAdapter.h  Makefile.am  gps.c  gps_converter.cpp  gps_converter.h  gps_extended.h  gps_interface.cpp  loc.cpp  loc.h  loc_eng.cpp  loc_eng.h  loc_eng_agps.cpp  loc_eng_agps.h  loc_eng_dmn_conn.cpp  loc_eng_dmn_conn.h  loc_eng_dmn_conn_glue_msg.c  loc_eng_dmn_conn_glue_msg.h  loc_eng_dmn_conn_glue_pipe.c  loc_eng_dmn_conn_glue_pipe.h  loc_eng_dmn_conn_handler.cpp  loc_eng_dmn_conn_handler.h  loc_eng_dmn_conn_thread_helper.c  loc_eng_dmn_conn_thread_helper.h  loc_eng_log.cpp  loc_eng_log.h  loc_eng_msg.cpp  loc_eng_msg.h  loc_eng_msg_id.h  loc_eng_ni.cpp  loc_eng_ni.h  loc_eng_nmea.cpp  loc_eng_nmea.h  loc_eng_xtra.cpp  loc_eng_xtra.h  loc_ulp.h
loc_api/loc_api_v02/: Android.mk  LocApiV02Adapter.cpp  LocApiV02Adapter.h  loc_api_sync_req.c  loc_api_sync_req.h  loc_api_v02_client.c  loc_api_v02_client.h  loc_api_v02_log.c  loc_api_v02_log.h  loc_util_log.h  location_service_v02.c  location_service_v02.h
loc_api/ulp/inc/: ulp.h
(+919 files in other folders)
